some changes done

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
       <div class="spinner-grow text-primary" role="status"></div>
     </div>
 
-    <div class="container-fluid p-5 my-5">
+    <div class="container-fluid py-2 my-5">
         <div class="container">
-            <div class="row">
+            <div class="row g-2">
                 <div class="col-lg-4 col-12 col-md-12">
                     <img src="image/samiksha.png" alt="" class="animated zoomIn img-fluid rounded">
                 </div>
-                <div class="col-lg-8 col-12">
+                <div class="col-lg-8 col-12 col-md-12">
                     <h1 class="text-center mb-2" id="typing-effect">
                     </h1>
                     <p class="p-5 about">Ms. Samiksha Borele brings a dynamic and innovative perspective to the leadership team, actively shaping Bhaiji Group future. With over 10 years of experience in the company, she has gained deep knowledge in real estate and has been instrumental in driving new ventures and growth opportunities.
