--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="col-lg-8 col-12 col-md-12">
                     <h1 class="text-center mb-2" id="typing-effect">
                     </h1>
-                    <p class="p-5 about">Ms. Samiksha Borele brings a dynamic and innovative perspective to the leadership team, actively shaping Bhaiji Group future. With over 10 years of experience in the company, she has gained deep knowledge in real estate and has been instrumental in driving new ventures and growth opportunities.
+                    <p class="p-2 py-5 about">Ms. Samiksha Borele brings a dynamic and innovative perspective to the leadership team, actively shaping Bhaiji Group future. With over 10 years of experience in the company, she has gained deep knowledge in real estate and has been instrumental in driving new ventures and growth opportunities.
 
                     Armed with many degrees in management, including an MBA in Marketing and HR from IIPM and an MBA in International Business Management from the renowned La Trobe University of Australia, she combines expertise with a visionary mindset. Ms. Borele has been pivotal in introducing the hospitality segment, including Tiana Inn, and the upcoming five-star luxury hotel and banquet facilities, creating a strong new stream for the company.
 
