--- a/index.html
+++ b/index.html
@@ -42,21 +42,176 @@
 
     <div class="container-fluid py-2 my-5">
         <div class="container">
-            <div class="row g-2">
+            <div class="row g-4 intro">
                 <div class="col-lg-4 col-12 col-md-12">
                     <img src="image/samiksha.png" alt="" class="animated zoomIn img-fluid rounded">
                 </div>
                 <div class="col-lg-8 col-12 col-md-12">
                     <h1 class="text-center mb-2" id="typing-effect">
                     </h1>
-                    <p class="p-2 py-5 about">Ms. Samiksha Borele brings a dynamic and innovative perspective to the leadership team, actively shaping Bhaiji Group future. With over 10 years of experience in the company, she has gained deep knowledge in real estate and has been instrumental in driving new ventures and growth opportunities.
+                    <p class="p-2 py-5 about">Dr. Samiksha Borele is a visionary leader and President of Borele World, a renowned real estate and hospitality company. With a decade-long tenure, she has been instrumental in shaping the company's future, driving growth, and exploring new ventures. Her expertise spans real estate, marketing, and international business, backed by prestigious degrees from IIPM (MBA in Marketing and HR) and La Trobe University (MBA in International Business Management).
 
-                    Armed with many degrees in management, including an MBA in Marketing and HR from IIPM and an MBA in International Business Management from the renowned La Trobe University of Australia, she combines expertise with a visionary mindset. Ms. Borele has been pivotal in introducing the hospitality segment, including Tiana Inn, and the upcoming five-star luxury hotel and banquet facilities, creating a strong new stream for the company.
-
-                    Her forward-thinking vision includes expanding into more innovative hospitality projects, ensuring Borele   group continues to lead in excellence and diversification.</p>
+                      Under her leadership, Borele World has expanded its footprint, diversified its offerings, and established itself as a trusted name in the industry. Dr. Borele's forward-thinking approach, strategic vision, and dedication to excellence have earned her recognition as a respected figure in the business community.</p>
                 </div>
             </div>
         </div>
+      </div>
+
+    <div class="container-fluid my-5">
+      <div class="container">
+        <h1 class="text-center fw-bold pb-5">Expertise/Skills</h1>
+        <p>Dr. Samiksha Borele possesses a unique blend of skills and expertise, including:</p>
+        <div class="row g-4 py-4">
+          <div class="col-lg-4 col-12 col-md-6">
+            <h5>Real Estate Development</h5>
+            <ol>
+              <li>Land acquisition and development</li>
+              <li>Project planning and execution</li>
+              <li>Property management</li>
+            </ol>
+          </div>
+          <div class="col-lg-4 col-12 col-md-6">
+            <h5>Hospitality Management</h5>
+            <ol>
+              <li>Hotel operations and management</li>
+              <li>Customer service excellence</li>
+              <li>Revenue growth strategies</li>
+            </ol>
+          </div>
+          <div class="col-lg-4 col-12 col-md-6">
+            <h5>Marketing Strategy</h5>
+            <ol>
+              <li>Brand development and positioning</li>
+              <li>Digital marketing and advertising</li>
+              <li>Public relations</li>
+            </ol>
+          </div>
+        </div>
+        <div class="row g-4 py-4">
+          <div class="col-lg-4 col-12 col-md-6">
+            <h5>Human Resources</h5>
+            <ol>
+              <li>Talent acquisition and development</li>
+              <li>Performance management</li>
+              <li>Organizational development</li>
+            </ol>
+          </div>
+          <div class="col-lg-4 col-12 col-md-6">
+            <h5>International Business</h5>
+            <ol>
+              <li>Global market analysis</li>
+              <li>Cross-cultural management</li>
+              <li>International trade and commerce</li>
+            </ol>
+          </div>
+          <div class="col-lg-4 col-12 col-md-6">
+            <h5>Leadership</h5>
+            <ol>
+              <li>Strategic planning and implementation</li>
+              <li>Team building and motivation</li>
+              <li>Change management</li>
+            </ol>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid py-2 my-5">
+      <div class="container">
+        <h1 class="text-center fw-bold pb-5">Experience</h1>
+        <div class="row experience">
+          <div class="col-lg-8 col-12 col-md-12">
+            <p>As President of Borele World, Dr. Samiksha Borele has:
+              <ul>
+                <li>Led company growth and expansion, driving revenue increase and market share growth.</li>
+                <li>Conceptualized and executed successful projects, including Tiana Inn and upcoming luxury hotel and banquet facilities.</li>
+                <li>Fostered strategic partnerships and collaborations, enhancing business opportunities.</li>
+                <li>Developed and implemented innovative marketing strategies, boosting brand visibility.</li>
+                <li>Mentored and trained teams, promoting professional growth and development.</li>
+              </ul>
+            </p>
+          </div>
+          <div class="col-lg-4 col-12 col-md-12 d-flex justify-content-center">
+            <img src="image/2.jpeg" alt="" style="max-width: 100%; height: 400px;">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid py-2 my-5">
+      <div class="container">
+        <h1 class="text-center fw-bold pb-5">Achievements</h1>
+        <ol class="py-3">
+          <li>Introduced hospitality segment, creating a new revenue stream and diversifying company offerings.</li>
+          <li>Developed and launched Tiana Inn, a flagship hospitality project.</li>
+          <li>Conceptualized and executed upcoming five-star luxury hotel and banquet facilities.</li>
+          <li>Contributed to Borele World's recognition as a leading real estate and hospitality company.</li>
+          <li>Received industry awards and recognition for innovative leadership.</li>
+        </ol>
+        <h4>Career/Professional Achievements</h4>
+        <ol class="py-3">
+          <li>Advance Business Etiquette & Corporate Grooming Program by Savoir Faire Academie in 2024.</li>
+          <li>Participated in GOTA: Global Opportunities & Threat Analysis Program by The Indian Institute of Planning & Management.</li>
+          <li>Attended the Global Management Challenge at La Trobe University Graduate School of Management in 2006.</li>
+          <li>Global Business Environment Executive Management Programme by Stansfield College in 2004.</li>
+        </ol>
+        <h4>Other Awards and Achievements</h4>
+        <ol class="py-3">
+          <li>Conferred with The STARZ of India Award - 2024 as the most “Promising Life Coach Specializing in Relationship Crafting” by Vkonnect Star Event & Entertainment.</li>
+          <li>Certified Associated Leadership & Executive Coach by NLP Coaching Academy in 2017.</li>
+          <li>An official and active Charter Member of “Toastmasters Internationals” club since 2004.</li>
+        </ol>
+        <h4>Lifetime Achievements</h4>
+        <ol class="py-3">
+          <li>Honored with Swami Vivekananda ChangeMaker Award 2021 by MENTORx.</li>
+          <li>Recognised and Awarded at Indian Innovative Startup Conference 2022 at Sharda University by MMIFF.</li>
+          <li>Guest of Honor at State level summit on Technology & Entrepreneurship at CT University.</li>
+          <li>Guest of Honor at ITCAIR 2021 at IEI TNSC.</li>
+          <li>Guest of Honor at Euphoria 2021 at MENTORx.</li>
+          <li>Guest of Honor at International Student Exchange Program 2021 by RevUp.</li>
+          <li>Golden Pinnacle Award 2021 by National Sports & Youth Development Council.</li>
+          <li>Guest of Honor at Global Youth Conference 2020.</li>
+          <li>Guest of Honor and Keynote Speaker at WOMENOMICS - Global Summit 2020 at Shreem Foundation.</li>
+          <li>Guest of Honor and Keynote Speaker at National Mentoring Day Celebrations 2020 by Grit Academy, Cyprus.</li>
+        </ol>
+        <h4>Professional Recognitions</h4>
+        <ol class="py-3">
+          <li>Keynote Speaker at Indo-Canadian Student mentoring summit at ICACI Canada.</li>
+          <li>Appreciated as Visionary Leader during 2 days workshop on "New Age Skills: Technology & Entrepreneurship Transforming Academia to Industry" at Chitkara University.</li>
+          <li>Keynote Speaker at 5 days international certified skill development program 2020 at MOJO pundit.</li>
+          <li>Keynote Speaker at "EDU Leader Conference 2020" with Lions Club.</li>
+        </ol>
+      </div>
+    </div>
+
+    <div class="container-fluid py-2 my-5">
+      <div class="container">
+        <h1>Get In Touch</h1>
+        <ul>
+          <li>Phone: +91 92721 00771</li>
+          <li>Mail: contact@boreleworld.com</li>
+          <li>Website: www.boreleworld.com</li>
+          <li>Address: Borele World Tower, Plot No. 9, Abhyankar Nagar, Nagpur-440010 Maharashtra, INDIA</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="container-fluid copyright py-4 bg-dark">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+            <span class="text-light">&copy; 2024, All rights reserved.</span
+            >
+          </div>
+          <div class="col-md-6 my-auto text-center text-md-end text-light">
+            Designed By
+            <a
+              href="https://www.linkedin.com/in/himanijangid07/"
+              >Himani Jangid</a
+            >
+          </div>
+        </div>
+      </div>
     </div>
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
