--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
                     <img src="image/samiksha.png" alt="" class="animated zoomIn img-fluid rounded">
                 </div>
                 <div class="col-lg-8 col-12 col-md-12">
-                    <h1 class="text-center mb-2" id="typing-effect">
-                    </h1>
+                    <h1 class="text-center mb-2">Dr. Samiksha Borele, President</h1>
                     <p class="p-2 py-5 about">Dr. Samiksha Borele is a visionary leader and President of Borele World, a renowned real estate and hospitality company. With a decade-long tenure, she has been instrumental in shaping the company's future, driving growth, and exploring new ventures. Her expertise spans real estate, marketing, and international business, backed by prestigious degrees from IIPM (MBA in Marketing and HR) and La Trobe University (MBA in International Business Management).
 
                       Under her leadership, Borele World has expanded its footprint, diversified its offerings, and established itself as a trusted name in the industry. Dr. Borele's forward-thinking approach, strategic vision, and dedication to excellence have earned her recognition as a respected figure in the business community.</p>
@@ -63,7 +62,7 @@
         <p>Dr. Samiksha Borele possesses a unique blend of skills and expertise, including:</p>
         <div class="row g-4 py-4">
           <div class="col-lg-4 col-12 col-md-6">
-            <h5>Real Estate Development</h5>
+            <h5 class="fw-bold">Real Estate Development</h5>
             <ol>
               <li>Land acquisition and development</li>
               <li>Project planning and execution</li>
@@ -71,7 +70,7 @@
             </ol>
           </div>
           <div class="col-lg-4 col-12 col-md-6">
-            <h5>Hospitality Management</h5>
+            <h5 class="fw-bold">Hospitality Management</h5>
             <ol>
               <li>Hotel operations and management</li>
               <li>Customer service excellence</li>
@@ -79,7 +78,7 @@
             </ol>
           </div>
           <div class="col-lg-4 col-12 col-md-6">
-            <h5>Marketing Strategy</h5>
+            <h5 class="fw-bold">Marketing Strategy</h5>
             <ol>
               <li>Brand development and positioning</li>
               <li>Digital marketing and advertising</li>
@@ -89,7 +88,7 @@
         </div>
         <div class="row g-4 py-4">
           <div class="col-lg-4 col-12 col-md-6">
-            <h5>Human Resources</h5>
+            <h5 class="fw-bold">Human Resources</h5>
             <ol>
               <li>Talent acquisition and development</li>
               <li>Performance management</li>
@@ -97,7 +96,7 @@
             </ol>
           </div>
           <div class="col-lg-4 col-12 col-md-6">
-            <h5>International Business</h5>
+            <h5 class="fw-bold">International Business</h5>
             <ol>
               <li>Global market analysis</li>
               <li>Cross-cultural management</li>
@@ -105,7 +104,7 @@
             </ol>
           </div>
           <div class="col-lg-4 col-12 col-md-6">
-            <h5>Leadership</h5>
+            <h5 class="fw-bold">Leadership</h5>
             <ol>
               <li>Strategic planning and implementation</li>
               <li>Team building and motivation</li>
@@ -148,20 +147,27 @@
           <li>Contributed to Borele World's recognition as a leading real estate and hospitality company.</li>
           <li>Received industry awards and recognition for innovative leadership.</li>
         </ol>
-        <h4>Career/Professional Achievements</h4>
+        <h4 class="fw-bold">Career/Professional Achievements</h4>
         <ol class="py-3">
           <li>Advance Business Etiquette & Corporate Grooming Program by Savoir Faire Academie in 2024.</li>
           <li>Participated in GOTA: Global Opportunities & Threat Analysis Program by The Indian Institute of Planning & Management.</li>
           <li>Attended the Global Management Challenge at La Trobe University Graduate School of Management in 2006.</li>
           <li>Global Business Environment Executive Management Programme by Stansfield College in 2004.</li>
         </ol>
-        <h4>Other Awards and Achievements</h4>
-        <ol class="py-3">
-          <li>Conferred with The STARZ of India Award - 2024 as the most “Promising Life Coach Specializing in Relationship Crafting” by Vkonnect Star Event & Entertainment.</li>
-          <li>Certified Associated Leadership & Executive Coach by NLP Coaching Academy in 2017.</li>
-          <li>An official and active Charter Member of “Toastmasters Internationals” club since 2004.</li>
-        </ol>
-        <h4>Lifetime Achievements</h4>
+        <div class="row g-4 achievements p-3">
+          <div class="col-lg-8 col-12 col-md-12">
+            <h4 class="fw-bold">Other Awards and Achievements</h4>
+            <ol class="py-3">
+              <li>Conferred with The STARZ of India Award - 2024 as the most “Promising Life Coach Specializing in Relationship Crafting” by Vkonnect Star Event & Entertainment.</li>
+              <li>Certified Associated Leadership & Executive Coach by NLP Coaching Academy in 2017.</li>
+              <li>An official and active Charter Member of “Toastmasters Internationals” club since 2004.</li>
+            </ol>
+          </div>
+          <div class="col-lg-4 col-12 col-md-12 d-flex justify-content-center">
+            <img src="image/3.jpeg" alt="" style="max-width: 100%; height: 400px;">
+          </div>
+        </div>
+        <h4 class="fw-bold">Lifetime Achievements</h4>
         <ol class="py-3">
           <li>Honored with Swami Vivekananda ChangeMaker Award 2021 by MENTORx.</li>
           <li>Recognised and Awarded at Indian Innovative Startup Conference 2022 at Sharda University by MMIFF.</li>
@@ -174,7 +180,7 @@
           <li>Guest of Honor and Keynote Speaker at WOMENOMICS - Global Summit 2020 at Shreem Foundation.</li>
           <li>Guest of Honor and Keynote Speaker at National Mentoring Day Celebrations 2020 by Grit Academy, Cyprus.</li>
         </ol>
-        <h4>Professional Recognitions</h4>
+        <h4 class="fw-bold">Professional Recognitions</h4>
         <ol class="py-3">
           <li>Keynote Speaker at Indo-Canadian Student mentoring summit at ICACI Canada.</li>
           <li>Appreciated as Visionary Leader during 2 days workshop on "New Age Skills: Technology & Entrepreneurship Transforming Academia to Industry" at Chitkara University.</li>
