--- a/index.html
+++ b/index.html
@@ -44,36 +44,108 @@
 </head>
 <body>
 
-  <div class="gate-banner intro" id="gateBanner">
-    <div class="left-gate"></div>
-    <div class="right-gate"></div>
-    <div class="gate-content text-center text-white">
-      <h3>Welcome To</h3>
-      <h1 class="fw-bold">Dr. Samiksha Borele's</h1>
-      <h3>World</h3>
-      <button class="btn mt-4" id="openBtn">Click to Enter</button>
+  <div class="gradient-bg py-5">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-11 col-md-10 col-lg-12">
+          <div class="image-box shadow-lg">
+            <img src="image/Banner - Dr. Samiksha Borele 1.png" alt="Dr. Samiksha Borele" class="img-fluid rounded">
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
-  <div class="website-content" id="websiteContent">
-    <!-- Add your real website sections here -->
-    <section class="about-section p-5">
-      <div class="content">
-        <h1 class="fw-bold py-3">Dr. Samiksha Borele</h1>
-        <h3>President, Borele World</h3>
+  <div class="container-fluid py-5">
+    <div class="container">
+      <h2 class="text-center mb-5" style="color: #770737;">About</h2>
+      <div class="row align-items-center">
+        <div class="col-lg-6 col-12 mb-4 mb-lg-0">
+          <div class="img-wrapper">
+            <img src="image/about4.jpeg" alt="Dr. Samiksha Borele" class="img-fluid rounded shadow w-50 mx-auto d-block">
+          </div>
+        </div>
+        <div class="col-lg-6 col-12">
+          <p style="text-align: justify; color: #052d44;">
+            Dr. Samiksha Borele is a Visionary Leader, a Seasoned Entrepreneur, Positive Mindset Mentor and President of Borele World, a renowned Real Estate and Hospitality company. She is also the Trustee – Borele Foundation, Director at Bhaiji Infraprojests Pvt. Ltd., SB Hospitality Pvt. Ltd., and Ruchika Infra Pvt. Ltd. Dr. Samiksha Borele is a dynamic and visionary leader with extensive expertise in real estate development, hospitality management, marketing strategy, human resources, international business, and leadership. With a track record of success in business growth, strategic planning, and operational excellence, she has been instrumental in shaping the trajectory of Borele World, a premier enterprise known for its excellence in real estate, hospitality, and business innovation. Dr. Samiksha Borele is a renowned Life Coach, Positive Mindset Mentor, Leadership Mentor, and Wellness Mentor, dedicated to transforming lives through the power of mindset and perspective. Dr. Samiksha Borele is a firm advocate for the transformative power of a positive mindset. She wholeheartedly believes that cultivating a resilient and optimistic outlook is the cornerstone of achieving success in all aspects of life, including entrepreneurship, business, and startups.
+          </p>
+        </div>
       </div>
-      <div class="image-container">
-        <img src="image/about1.jpeg" alt="">
-        <img src="image/about2.jpeg" alt="">
-        <img src="image/about3.jpeg" alt="">
-        <img src="image/about4.jpeg" alt="">
-        <img src="image/about5.jpeg" alt="">
-      </div>
-    </section>
+    </div>
   </div>
 
-    <!-- Expertise Section with Gradient Background -->
-    
+  <div class="container-fluid py-5">
+    <div class="container">
+      <h2 class="text-center pb-5 fw-bold" style="color: #770737;">Accolades & Milestones</h2>
+      <div class="row g-4 justify-content-center">
+        <div class="col-lg-4 col-md-6 rounded milestone-box">
+          <h4 class="text-center">MENTOR OF CHANGE</h4>
+          <p class="text-white text-center">NITI AAYOG <br> GOVT OF INDIA</p>
+        </div>
+        <div class="col-lg-4 col-md-6 rounded milestone-box">
+          <h4 class="text-center">CONTENT DIRECTOR</h4>
+          <p class="text-white text-center">HENRIETTA MITCHELL</p>
+        </div>
+        <div class="col-lg-4 col-md-6 rounded milestone-box">
+          <h4 class="text-center">MENTOR & INVESTOR</h4>
+          <p class="text-white text-center">STARTUP INDIA</p>
+        </div>
+        <div class="col-lg-4 col-md-6 rounded milestone-box">
+          <h4 class="text-center">AWARD-WINNING MENTOR</h4>
+          <p class="text-white text-center">Recognized for outstanding
+            contributions to mindset
+            coaching</p>
+        </div>
+        <div class="col-lg-4 col-md-6 rounded milestone-box">
+          <h4 class="text-center">VIDYANJALI MENTOR</h4>
+          <p class="text-white text-center">MINISTRY OF EDUCATION, <br>GOVT. OF INDIA</p>
+        </div>
+        <div class="col-lg-4 col-md-6 rounded milestone-box">
+          <h4 class="text-center">JURY MEMBER</h4>
+          <p class="text-white text-center">Invited to judge fashion
+            shows and beauty
+            pageants, leveraging
+            expertise in personal
+            development</p>
+        </div>
+        <div class="col-lg-4 col-md-6 rounded milestone-box">
+          <h4 class="text-center">MENTOR</h4>
+          <p class="text-white text-center">DISRUPT CELL,
+            INDIAN INSTITUTE OF
+            TECHNOLOGY, GUWAHATI</p>
+        </div>
+        <div class="col-lg-4 col-md-6 rounded milestone-box">
+          <h4 class="text-center">NGO COLLABORATIONS</h4>
+          <p class="text-white text-center">Actively partnering with
+            multiple NGOs to support
+            mental wellness initiatives
+            and empower individuals in
+            need</p>
+        </div>
+        <div class="col-lg-4 col-md-6 rounded milestone-box">
+          <h4 class="text-center">MASTER CERTIFIED LIFE
+            COACH</h4>
+          <p class="text-white text-center">Master Certified Life Coach
+            (MCLC), recognized by the
+            International Coach
+            Federation (ICF) for
+            exceptional coaching
+            expertise.</p>
+        </div>
+        <div class="col-lg-4 col-md-6 rounded milestone-box">
+          <h4 class="text-center">UPCOMING AUTHOR</h4>
+          <p class="text-white text-center">WORKING ON HER
+            FORTHCOMING BOOK -
+            "THE INNER COMPASS -
+            FINDING YOUR TRUE
+            NORTH”
+            .</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+
     <div class="container-fluid copyright py-4 bg-dark text-white">
       <div class="container">
         <div class="row">
