--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <div class="container-fluid py-5">
     <div class="container">
-      <h2 class="text-center mb-5" style="color: #770737;">About</h2>
+      <h2 class="text-center mb-5 fw-bold" style="color: #770737;">Introduction</h2>
       <div class="row align-items-center">
         <div class="col-lg-6 col-12 mb-4 mb-lg-0">
           <div class="img-wrapper">
@@ -77,7 +77,20 @@
   <div class="container-fluid py-5">
     <div class="container">
       <h2 class="text-center pb-5 fw-bold" style="color: #770737;">Accolades & Milestones</h2>
-      <div class="row g-4 justify-content-center">
+      <div class="container pb-4">
+        <div class="row mileImages gx-lg-5 pb-lg-3 justify-content-center text-center">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-10">
+            <img src="image/about7.jpeg" alt="" class="img-fluid rounded shadow">
+          </div>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-10">
+            <img src="image/about5.jpeg" alt="" class="img-fluid rounded shadow">
+          </div>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-10">
+            <img src="image/about6.jpeg" alt="" class="img-fluid rounded shadow">
+          </div>
+        </div>
+      </div>
+      <div class="row g-4 justify-content-center" id="milestone">
         <div class="col-lg-4 col-md-6 rounded milestone-box">
           <h4 class="text-center">MENTOR OF CHANGE</h4>
           <p class="text-white text-center">NITI AAYOG <br> GOVT OF INDIA</p>
@@ -133,9 +146,8 @@
             expertise.</p>
         </div>
         <div class="col-lg-4 col-md-6 rounded milestone-box">
-          <h4 class="text-center">UPCOMING AUTHOR</h4>
-          <p class="text-white text-center">WORKING ON HER
-            FORTHCOMING BOOK -
+          <h4 class="text-center">PUBLISHED AUTHOR</h4>
+          <p class="text-white text-center">DR. BORELE IS A PUBLISHED AUTHOR WITH HER BOOK
             "THE INNER COMPASS -
             FINDING YOUR TRUE
             NORTH”
@@ -145,8 +157,224 @@
     </div>
   </div>
   
+  <div class="container-fluid pb-5">
+    <div class="container">
+      <h2 class="text-center fw-bold py-5" style="color: #052d44;">Awards, Honors, & Recognitions</h2>
+      <div class="awards1 container">
+        <h3 class="text-center fw-bold py-3">Career/Professional Achievements</h3>
+        <ul>
+          <li class="py-2">Advance Business Etiquette & Corporate Grooming Program by Savoir Faire Academie in 2024.</li>
+          <li class="py-2">Participated in GOTA: Global Opportunities & Threat Analysis Program by the Indian Institute of Planning & Management.</li>
+          <li class="py-2">Attended the Global Management Challenge at La Trobe University, Australia, Graduate School of Management in 2006.</li>
+          <li class="py-2">Global Business Environment Executive Management Programme by Stansfield College, Singapore in 2004.</li>
+        </ul>
+        <div class="awardBtn">
+          <button class="btn mb-3" style="border: 2px solid goldenrod;">
+            <a href="awards.html" class="text-decoration-none" style="color: goldenrod;">Load More Awards</a>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
 
-    <div class="container-fluid copyright py-4 bg-dark text-white">
+  <div class="container-fluid py-5">
+    <div class="container">
+      <h2 class="text-center fw-bold mb-5" style="color: #770737;">About</h2>
+      <div class="intro">
+        <div class="row g-4 justify-content-center align-items-center">
+          <div class="col-lg-8 col-sm-12 col-md-7 rounded p-3" style="background-color: #052d44; color: white; ">
+            <p>Dr. Samiksha Borele is a
+              Visionary Leader, a
+              Transformational Life
+              Coach & Positive Mindset
+              Mentor and President of
+              Borele World, a renowned
+              real estate and hospitality
+              company. She is also the
+              Trustee – Borele
+              Foundation, Director at
+              Bhaiji Infraprojests Pvt. Ltd.,
+              SB Hospitality Pvt. Ltd., and
+              Ruchika Infra Pvt. Ltd. Dr. Samiksha Borele is a
+              dynamic and visionary
+              leader with extensive
+              expertise in real estate
+              development, hospitality
+              management, marketing
+              strategy, human resources,
+              international business, and
+              leadership. With a track
+              record of success in
+              business growth, strategic
+              planning, and operational
+              excellence, she has been
+              instrumental in shaping the
+              trajectory of Borele World, a
+              premier enterprise known
+              for its excellence in real
+              estate, hospitality, and
+              business innovation.</p>
+          </div>
+          <div class="col-lg-4 col-sm-12 col-md-5 d-flex justify-content-end">
+            <img src="image/1.png" alt="" class="img-fluid about-img">
+          </div>
+        </div>
+        <div class="row g-4 justify-content-center align-items-center">
+          <div class="col-lg-4 col-sm-12 col-md-5">
+            <img src="image/2.jpeg" alt="" class="img-fluid about-img">
+          </div>
+          <div class="col-lg-8 col-sm-12 col-md-7 rounded p-3" style="background-color: #770737; color: white; ">
+            <p>Dr.
+              Samiksha Borele is a
+              renowned Life Coach,
+              Positive Mindset Mentor,
+              Leadership Mentor, and
+              Wellness Mentor, dedicated
+              to transforming lives
+              through the power of
+              mindset and perspective.
+              Dr. Samiksha Borele is a
+              firm advocate for the
+              transformative power of a
+              positive mindset. She
+              wholeheartedly believes
+              that cultivating a resilient
+              and optimistic outlook is
+              the cornerstone of
+              achieving success in all
+              aspects of life, including
+              entrepreneurship, business,
+              and startups. With a decade-long
+              tenure, she has been
+              instrumental in shaping
+              the company
+              '
+              s future,
+              driving growth, and
+              exploring new ventures.
+              She is a Ph.D. in
+              Management by
+              Chicago Open
+              University, USA; MBA in
+              Marketing and HR from
+              IIPM and MBA in
+              International Business
+              Management from La
+              Trobe University,
+              Australia.</p>
+          </div>
+        </div>
+        <div class="row g-4 justify-content-center align-items-center">
+          <div class="col-lg-8 col-sm-12 col-md-7 rounded p-3" style="background-color: #052d44; color: white; ">
+            <p>Under her
+              leadership, Borele World
+              has expanded its
+              footprint, diversified its
+              offerings, and
+              established itself as a
+              trusted name in the
+              industry.
+              DR. BORELE'S
+              FORWARD-THINKING
+              APPROACH,
+              STRATEGIC VISION,
+              AND DEDICATION TO
+              EXCELLENCE HAVE
+              EARNED HER
+              RECOGNITION AS A
+              RESPECTED FIGURE IN
+              THE BUSINESS
+              COMMUNITY.
+              As President of Borele
+              World, Dr. Borele has
+              spearheaded revenue
+              growth, market
+              expansion, and
+              strategic collaborations,
+              positioning the
+              company as a
+              formidable player in
+              multiple industries. Her
+              ability to conceptualize,
+              plan, and execute
+              large-scale projects has
+              led to the success of
+              ventures such as Tiyana
+              Inn and upcoming
+              luxury hotel and
+              banquet facilities.
+              Dr. Borele possesses a
+              unique blend of skills
+              across multiple
+              domains, including; Real
+              Estate Development,
+              Hospitality
+              Management, Marketing
+              Strategies, International
+              Business and
+              Leadership.</p>
+          </div>
+          <div class="col-lg-4 col-sm-12 col-md-5 d-flex justify-content-end">
+            <img src="image/3.jpeg" alt="" class="img-fluid about-img">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-fluid py-5">
+    <div class="container">
+      <h2 class="text-center fw-bold mb-5" style="color: #052d44;">Wall of Fame</h2>
+  
+      <div class="row justify-content-center align-items-center text-center g-4">
+        <div class="col-md-5">
+          <img src="image/award2.jpeg" alt="Mentor of Change" class="img-fluid w-75 mx-auto d-block">
+          <p class="mt-2" style="color: #770737; font-size: large;">Mentor of Change | NITI AAYOG</p>
+        </div>
+        <div class="col-md-5">
+          <img src="image/about2.jpeg" alt="TEDx Speaker" class="img-fluid w-75 mx-auto d-block">
+          <p class="mt-5" style="color: #770737; font-size: large;">TEDx Speaker</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-fluid py-5">
+    <div class="container">
+      <h2 class="text-center fw-bold mb-5" style="color: #052d44;">Philanthropic Vision</h2>
+  
+      <!-- Row 1: Description Box with Image -->
+      <div class="row justify-content-center g-4">
+        <div class="col-lg-5 col-md-6 col-12 mb-4">
+          <div class="box p-4 shadow rounded text-white" style="background-color: #052d44;">
+            <img src="image/about1.jpeg" alt="Women Empowerment" class="img-fluid mb-3 rounded">
+            <p class="text-justify">Dr. Samiksha Borele is a dedicated philanthropist committed to empowering women and fostering sustainable social change. Through her initiatives, she has provided education, economic opportunities, and mentorship to hundreds of women, enabling them to achieve financial independence and personal growth. Her efforts are deeply rooted in bridging the gender gap, promoting inclusivity, and advocating for equal opportunities in both professional and personal spheres.</p>
+          </div>
+        </div>
+  
+        <!-- Row 2: Description Box with Image -->
+        <div class="col-lg-5 col-md-6 col-12 mb-4">
+          <div class="box p-4 shadow rounded text-white" style="background-color: #770737;">
+            <img src="image/about8.jpeg" alt="Women Skill Development" class="img-fluid mb-3 rounded">
+            <p class="text-justify">She has worked on many women-centric programs aimed at skill development, entrepreneurship training, and community upliftment. She has collaborated with various NGOs and social organizations to facilitate educational scholarships, vocational training, and employment support for underprivileged women. Her strategic interventions have not only transformed individual lives but have also contributed to larger societal progress by fostering self-reliance and confidence among women.</p>
+          </div>
+        </div>
+      </div>
+  
+      <!-- Row 3: Final Section Box -->
+      <div class="row justify-content-center g-4">
+        <div class="col-lg-10 col-md-10 col-12 mb-4">
+          <div class="box p-4 shadow rounded text-white" style="background: linear-gradient(45deg, #770737, #052d44);">
+            <p class="text-justify">Dr. Borele’s philanthropic vision extends beyond economic support—she actively champions mental health awareness, leadership coaching, and personal development programs tailored for women. Her impact continues to inspire and uplift countless individuals, cementing her reputation as a pioneering force for social change and an advocate for women’s empowerment.</p>
+            <p class="text-justify">Dr. Samiksha is committed to excellence, innovation, and sustainable growth in all her endeavors. Her strategic foresight, operational acumen, and passion for development continue to shape Borele World’s expansion and success in competitive global markets. She remains dedicated to transforming industries, inspiring teams, and creating impactful business solutions that drive long-term success.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+
+    <div class="container-fluid copyright py-4 text-white" style="background-color: #052d44;">
       <div class="container">
         <div class="row">
           <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
